--- a/css/estilos.css
+++ b/css/estilos.css
@@ -25,7 +25,72 @@ h1,h2,h3,h4,h5{
   font-family: 'Marcellus', serif;
 }
 
-/* barra de navegacion */
+/*mobile first*/
+nav{
+    display: flex;
+    flex-direction: column;
+}
+.logo{
+    background-color: var(--negro2);
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 1rem;
+}
+
+.logo img{
+    width: 40%;
+    max-width: 200px;
+}
+
+.logo i{
+    color: var(--blanco);
+    font-size: 2rem;
+}
+
+.menu{
+    display: flex;
+    flex-direction: column;
+    background-color: rgba(1, 10, 52, 0.838);
+    align-items: center;
+    justify-content: center;
+}
+
+.menu-hr{
+    width: 90%;
+    background-color: var(--blanco);
+}
+
+.item{
+    padding: 1rem;
+}
+
+nav a{
+    color: var(--blanco);
+    text-align: center;
+    font-family: 'Marcellus', serif;
+    font-size: 1.3em;
+    text-decoration: none;
+}
+
+nav a:hover{
+    background-color: #0b3860;
+    width: 100%;
+}
+
+.navbar-button{
+    background-color:transparent;
+    border: none;
+    border-radius: 3px;
+    font-size: 1em;
+    padding: 0.5rem;
+    font-family: 'Marcellus', serif;
+    color: var(--blanco);
+    cursor: pointer;
+}
+
+
+/* barra de navegacion 
 
 nav{
     display: flex;
@@ -63,7 +128,7 @@ nav{
     height: 3rem;
 }
 
-/* section features*/
+/* section features
 #features{
     display: flex;
     flex-direction: column;
@@ -118,7 +183,7 @@ nav{
     background-color: rgba(0,0,0,0.59);
 }
 
-/*basis*/
+/*basis
 
 .base{
     background-color: #fff;
