--- a/css/estilos-css-grid.css
+++ b/css/estilos-css-grid.css
@@ -47,6 +47,7 @@ h5 {
 /*Resolución tabletas*/
 @media screen and (min-width:768px) {
    
+    
 }
 
 /*Resolución resoluciones macro*/
@@ -98,10 +99,11 @@ z-index: 100;
     display: none;
     background-color: rgba(1, 10, 52, 0.838);
 }
+/*para centrar el hr*/
 .menu-hr {
     width: 90%;
     background-color: var(--blanco);
-    justify-self: center; /*para centrar el hr*/
+    justify-self: center; 
 }
  
 .item {
@@ -136,8 +138,174 @@ nav a:hover {
     margin-top: 60px;
     min-height: 400px;
 }
+.texto1{
+    background-color: rgba(0,0,0,0.35);
+    padding: 0.5rem;
+    font-size: 1.5rem;
+    color: var(--blanco);
+    display: flex; 
+    flex-wrap: wrap-reverse;
+}
 
-/*Resolución tabletas*/
+#descripcion {
+   margin: 1.5rem;
+}
+
+#features{
+    background: url(../img/index/bg-features.png);
+    color: white;
+    padding:  1rem;
+    margin-top: 1.5rem;
+}
+.features-title{
+    background-color: rgba(0,0,0,0.35);
+    text-align: center;
+    padding: 0.5rem;
+    font-size: 1.5rem;
+}
+.features-description{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    margin-top: 1rem;
+    margin-bottom: 2rem;
+}
+.feature{
+    width: 25%;
+    min-width: 180px;
+    max-width: 230px;
+    margin: 0.8rem;
+    padding: 1rem;
+    display:flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    border-radius: 5px;
+}
+
+.feature i{
+    font-size: 2.2em;
+    margin-bottom: 1.5rem;
+}
+
+.feature-blue{
+    background-color: #00325eae;
+}
+.feature-black{
+    background-color: rgba(0,0,0,0.59);
+}
+
+#ubicacion{
+    margin: 1rem;
+    font-size: 2.2em;
+    text-align: center;
+    font-family: 'Marcellus', serif;
+}
+#ubicacion p{
+    margin: 2rem;
+}
+.ubicanos-hr{
+  width: 90%;  
+  background-color: magenta;
+}
+#ubicacion iframe{
+    width:515px;
+    height:550px; 
+    border: 0;
+}
+#ubicacion div{
+    margin: 1rem;
+    padding-top: 1rem;
+    font-size: 1.5rem;
+}
+#ubicacion div p{
+    margin-top: 1rem;
+}
+
+#opinion{
+    background: url(../img/opinion/vector-comentarios.png);
+    color: white;
+    padding:  1rem;
+    margin-top: 1.5rem;
+    height: 7rem;
+}
+.opinion-title{
+    text-align: center;
+    padding: 0.5rem;
+    font-size: 2rem;
+}
+.opinon-description{
+    display: flex;
+    flex-wrap: colum;
+    justify-content: space-around;
+    margin-top: 1rem;
+    margin-bottom: 2rem;
+}
+
+
+.foto1{
+    width: 5rem;
+    height:5rem;
+    background-image: url(../img/opinion/user1.png);
+    background-size: cover;
+    border-radius: 50%;
+    margin: 0.5rem;
+}
+.foto2{
+    width: 5rem;
+    height:5rem;
+    background-image: url(../img/opinion/user2.png);
+    background-size: cover;
+    border-radius: 50%;
+    margin: 0 auto;
+}
+.foto3{
+    width: 5rem;
+    height:5rem;
+    background-image: url(../img/opinion/user3.png);
+    background-size: cover;
+    border-radius: 50%;
+    margin: 0 auto;
+
+}
+
+.opiniones{
+  display: flex;
+  flex-direction:column-reverse;
+
+  font-size: 1rem;
+
+}
+.opinion-uno .arriba{
+  display: flex;
+  flex-direction: row;
+  align-content: space-around;
+  align-items: flex-end;
+}
+.opinion-uno .arriba p{
+  flex-direction: column;
+}
+
+.opinion-uno{
+    background-color: var(--azuloscuro);
+    background-image: url(../img/opinion/Vector-opinion.png);
+    padding: 1rem;
+
+}
+.opinion-dos{
+    background-color: var(--azuloscuro);
+    background-image: url(../img/opinion/Vector-opinion.png);
+   justify-content: center;
+}
+.opinion-tres{
+    background-color: var(--azuloscuro);
+    background-image: url(../img/opinion/Vector-opinion.png);
+   justify-content: center;
+}
+
+
+
+/*Resolución tabletas
 @media screen and (min-width:768px) {
   nav{
   background-color: var(--negro2);
@@ -186,4 +354,3 @@ nav a:hover {
 }
    
 }
-
