--- a/css/estilos.css
+++ b/css/estilos.css
@@ -90,7 +90,7 @@ nav a:hover{
 }
 
 
-/* barra de navegacion 
+ barra de navegacion 
 
 nav{
     display: flex;
@@ -128,7 +128,7 @@ nav{
     height: 3rem;
 }
 
-/* section features
+section features
 #features{
     display: flex;
     flex-direction: column;
