--- a/css/estilos-css-grid.css
+++ b/css/estilos-css-grid.css
@@ -140,8 +140,9 @@ nav a:hover {
 }
 .texto1{
     background-color: rgba(0,0,0,0.35);
-    padding: 0.5rem;
-    font-size: 1.5rem;
+    padding-bottom: 5%;
+    margin-top: 19rem;
+    font-size: 2rem;
     color: var(--blanco);
     display: flex; 
     flex-wrap: wrap-reverse;
@@ -160,9 +161,11 @@ nav a:hover {
 .features-title{
     background-color: rgba(0,0,0,0.35);
     text-align: center;
-    padding: 0.5rem;
+    padding: 10px;
     font-size: 1.5rem;
 }
+
+
 .features-description{
     display: flex;
     flex-wrap: wrap;
