--- a/css/ej-css-grid.css
+++ b/css/ej-css-grid.css
@@ -8,42 +8,45 @@ html{
 
 body{
     font-size: 16px;
+    min-height: 100%;
 }
 
 #container-grid{
     display: grid;
-    grid-template: 
+    grid-template:
     "header" 100px
     "navbar" 50px
     "main" auto
     "sidebar" 100px
     "footer" 50px;
     text-align: center;
+    
 }
 
 header{
     grid-area: header;
-    background-color: blue;
+    background-color: aquamarine;
+
 }
 
 nav{
     grid-area: navbar;
-    background-color: yellow;
+    background-color: bisque;
 }
 
 main{
     grid-area: main;
-    background-color: blueviolet;
+    background-color: cadetblue;
 }
 
 aside{
     grid-area: sidebar;
-    background-color: green;
+    background-color:dimgray;
 }
 
 footer{
     grid-area: footer;
-    background-color: red;
+    background-color:tan;
 }
 
 /*Resolución tabletas*/
@@ -51,10 +54,10 @@ footer{
     #container-grid{
         grid-template-columns: 200px auto;
         grid-template-rows: 100px 50px auto 50px;
-        grid-template-areas: 
+        grid-template-areas:
         "header header"
         "navbar navbar"
-        "sidebar main" 
+        "sidebar main"
         "footer footer";
     }
 }
@@ -62,26 +65,18 @@ footer{
 /*Resolución resoluciones medias*/
 @media screen and (min-width:1024px) {
     #container-grid{
-        grid-template: 
+        grid-template:
         "header header header" 100px
         "navbar main sidebar" auto
         "footer footer footer" 50px /
-        200px auto 100px;
+          200px auto 100px;
     }
 }
 
 /*Resolución resoluciones macro*/
 @media screen and (min-width:1308px) {
-    .container-grid{
-         max-width: 1200px;
-         margin: 0 auto;
+    #container-grid{
+        max-width: 1200px;
+        margin: 0 auto;
     }
-
 }
-
-
-
-
-
-
-
